--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ navigationRuntimeAndroid = "2.9.0-alpha09"
 navigationRuntimeKtx = "2.8.9"
 navigationRuntimeDesktop = "2.9.0-alpha09"
 firebaseCrashlyticsBuildtools = "3.0.3"
+adsMobileSdk = "0.15.1-alpha01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ androidx-navigation-runtime-desktop = { group = "androidx.navigation", name = "n
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 kotlinpoet = { module = "com.squareup.kotlinpoet:kotlinpoet", version.ref = "kotlinpoet" }
 kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinxMetadataJvm" }
+ads-mobile-sdk = { group = "com.google.android.libraries.ads.mobile.sdk", name = "ads-mobile-sdk", version.ref = "adsMobileSdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
